--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
 }
 body {
   font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
+  /*font-family: 'Homenaje', sans-serif;*/
 }
 hr {
   border-color: #F05F40;
@@ -36,6 +37,7 @@ h4,
 h5,
 h6 {
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  /*font-family: 'Homenaje', sans-serif;*/
 }
 p {
   font-size: 16px;
@@ -65,6 +67,7 @@ aside {
   background-color: white;
   border-color: rgba(34, 34, 34, 0.05);
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  /*font-family: 'Homenaje', sans-serif;*/
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
   transition: all 0.35s;
@@ -72,6 +75,7 @@ aside {
 .navbar-default .navbar-header .navbar-brand {
   color: #F05F40;
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  /*font-family: 'Homenaje', sans-serif;*/
   font-weight: 700;
   text-transform: uppercase;
 }
@@ -163,7 +167,6 @@ header {
   color: white;
 }
 
-
 header .header-content {
   position: relative;
   text-align: center;
@@ -212,6 +215,10 @@ header .header-content .header-content-inner p {
     margin-left: auto;
     margin-right: auto;
   }
+}
+
+#homeHeader {
+  font-size: 36px;
 }
 .section-heading {
   margin-top: 0;
