--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,8 @@ body {
 }
 hr {
   border-color: #F05F40;
-  border-width: 3px;
-  max-width: 50px;
+  border-width: 2px;
+  max-width: 300px;
 }
 hr.light {
   border-color: white;
@@ -436,5 +436,5 @@ body {
   width: 100%;
 }
 .contactInfo {
-  te
+  font-size: 30px;
 }
